--- a/Hackathon.Core.LogicLayer/Hackathon.Core.LogicLayer.csproj
+++ b/Hackathon.Core.LogicLayer/Hackathon.Core.LogicLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{85891B0C-69B2-4336-981A-D936144AB575}</ProjectGuid>
+    <ProjectGuid>{6C98F2A2-4604-4542-AACF-C66F7F945737}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hackathon.Common.Utility</RootNamespace>
-    <AssemblyName>Hackathon.Common.Utility</AssemblyName>
+    <RootNamespace>Hackathon.Core.LogicLayer</RootNamespace>
+    <AssemblyName>Hackathon.Core.LogicLayer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,7 +40,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UtilityHelper.cs" />
+    <Compile Include="Traffic.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hackathon.Common.Utility\Hackathon.Common.Utility.csproj">
+      <Project>{85891b0c-69b2-4336-981a-d936144ab575}</Project>
+      <Name>Hackathon.Common.Utility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hackathon.Data.Model\Hackathon.Data.Model.csproj">
+      <Project>{efc107a4-db24-4e31-a158-0c6fd0a67568}</Project>
+      <Name>Hackathon.Data.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hackathon.Services.ExternalAccessService\Hackathon.Services.ExternalAccessService.csproj">
+      <Project>{237319c3-7f4f-4e04-91f0-8b8a678afa3d}</Project>
+      <Name>Hackathon.Services.ExternalAccessService</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
