--- a/Hackathon.Core.TrafficWorkflow/Hackathon.Core.TrafficWorkflow.csproj
+++ b/Hackathon.Core.TrafficWorkflow/Hackathon.Core.TrafficWorkflow.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{85891B0C-69B2-4336-981A-D936144AB575}</ProjectGuid>
+    <ProjectGuid>{D4319489-77A7-4122-A776-30BA0C89C24F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Hackathon.Common.Utility</RootNamespace>
-    <AssemblyName>Hackathon.Common.Utility</AssemblyName>
+    <RootNamespace>Hackathon.Core.TrafficWorkflow</RootNamespace>
+    <AssemblyName>Hackathon.Core.TrafficWorkflow</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UtilityHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
