--- a/Hackathon.Scripts.DataImporter/Hackathon.Scripts.DataImporter.csproj
+++ b/Hackathon.Scripts.DataImporter/Hackathon.Scripts.DataImporter.csproj
@@ -41,11 +41,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="IETT.Data\duraktangecenguzergahvehatlar.json" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <None Include="IETT.Data\garajlistesi.json" />
+    <None Include="IETT.Data\guzergahlistesiverileri.json" />
+    <None Include="IETT.Data\hatlistesihepsi.json" />
+    <None Include="IETT.Data\kapibazliyolculuk.json" />
+    <None Include="IETT.Data\operatorlistesi.json" />
+    <None Include="IETT.Data\orerbilgileri.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="IETT.Data\aracnobazlisefersayisivegidilenyolkmbilgisilistesi.json" />
+    <None Include="IETT.Data\durakbazliyolculuk.json" />
+    <None Include="IETT.Data\duraklistesiverileri.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="IETT.Data\kapinoilekonumbilgisi.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="IETT.Data\hatsiralistesi.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Hackathon.Common.Network\Hackathon.Common.Network.csproj">
+      <Project>{c71492b4-1057-4049-bbff-d2a0e969dff7}</Project>
+      <Name>Hackathon.Common.Network</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hackathon.Common.Utility\Hackathon.Common.Utility.csproj">
+      <Project>{85891b0c-69b2-4336-981a-d936144ab575}</Project>
+      <Name>Hackathon.Common.Utility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Hackathon.Data.Model\Hackathon.Data.Model.csproj">
+      <Project>{efc107a4-db24-4e31-a158-0c6fd0a67568}</Project>
+      <Name>Hackathon.Data.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
